# Live

./: .#README.md  .gitignore  CMakeLists.txt  README  build.sh
.cache/clangd/index/: Auth.cc.C00797AEE96C7B1E.idx  Broadcast.cc.230C5C65B6FBF39B.idx  Stream.cc.91420C145772B4CC.idx  async_client.cc.0E4AEEB65ACF3E77.idx  avio_list_dir.c.F37F9ABDB152A0FD.idx  avio_reading.c.4854CE5EC63CF428.idx  decode_audio.c.BDE56790A3921BC4.idx  decode_video.c.28289F6F63D7B34C.idx  demuxing_decoding.c.526E3F75CA20309D.idx  encode_audio.c.EBCD3CD55ACCAB52.idx  encode_video.c.0BAE9A7860769315.idx  extract_mvs.c.7A9E4E29378107B6.idx  filter_audio.c.D3691A45A83EF0A9.idx  filtering_audio.c.002E905E864C833D.idx  filtering_video.c.7D1DB98BFF1D5174.idx  http_multiclient.c.934A6A6466345862.idx  hw_decode.c.DA7522253106A744.idx  main.cpp.51C6D03C2F0C8074.idx  metadata.c.19344FE381C47C72.idx  muxing.c.7B06562FB35614C7.idx  remuxing.c.FF949C0E91295934.idx  resampling_audio.c.40AC369CBBE10B84.idx  scaling_video.c.484492309573638F.idx  ssl_client.cc.B70EFDA328B295E4.idx  transcode_aac.c.756F6D6E449F62B8.idx  transcoding.c.EB0C6B57DA06CA37.idx  vaapi_encode.c.5AFAE11CD074FF50.idx  vaapi_transcode.c.E2357F4048051A3F.idx
boost/: ssl_client.cc
ffmpeg/: metadata.c
jwt/: main.cpp
src/: Auth.cc  Broadcast.cc  Stream.cc
